tests/functional2/lang/to-path/eval-fail.err.exp
error:
       … while calling the 'toPath' builtin
         at /pwd/in.nix:1:1:
            1| builtins.toPath "foo/bar"
             | ^
            2|

       … while evaluating the first argument passed to builtins.toPath

       error: string 'foo/bar' doesn't represent an absolute path
